--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "library using the pug template engine",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
