--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "library using the pug template engine",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pug": "^2.0.4"
   },
